--- a/style.css
+++ b/style.css
@@ -4,12 +4,79 @@ header {
   text-align:right;
 }
 aside {
-  width: 10%;
+  position:relative;
+  max-width: 10%;
+  max-height: 10%;
   padding-left: .10rem;
-  margin-left: .2rem;
+  margin-left: .5rem;
   float: right;
-  font-style: italic;
-  color: #29627e;
+  line-height: 2.5; /*La propriété line-height définit la hauteur de la boîte d'une ligne.*/
+}
+
+
+body {
+  font-family:sans-serif;
+  text-align:center;
+
+  font-size:36px;
+  padding:125px 150px; padding-bottom:0;
+  background-image: linear-gradient(to top, #fddb92 0%, #d1fdff 100%);
+  background-repeat: round;
+}
+
+img {
+  width:294px;
+}
+aside img {
+width: 100% /* fit picto in their small size*/
+}
+
+
+.xp {
+  text-align:left;
+}
+
+h1, h2, h3 {text-transform:uppercase;}
+
+h2 {
+  margin-top:80px;margin-bottom:50px;
+}
+
+h1 {
+  font-weight:normal;
+  margin-bottom:0;
+  font-size:96px;
+}
+
+#tagline {
+  margin-top:0;
+  text-transform:uppercase; color:gray;
+  margin-bottom:110px;
+}
+
+a {color:black; text-decoration:none;}
+
+h3 {
+  margin-bottom:10px; margin-top:100px;
+}
+
+
+.location {margin-top:0;}
+
+ul {padding-left:80px;}
+
+footer {
+  margin-bottom: 5%;
+
+}
+
+.link { color: #28057a; } /* CSS link color (red) */
+.link:hover { color: #00FF00; } /* CSS link hover (green) */
+
+
+header {
+
+  text-align:right;
 }
 
 body {
@@ -66,71 +133,3 @@ footer {
 
 .link { color: #28057a; } /* CSS link color (red) */
 .link:hover { color: #00FF00; } /* CSS link hover (green) */
-
-
-.navigation {
-
-  aside {
-    align:right
-  }
-
-
-  header {
-
-    text-align:right;
-  }
-
-  body {
-    font-family:sans-serif;
-    text-align:center;
-
-    font-size:36px;
-    padding:125px 150px; padding-bottom:0;
-    background-image: linear-gradient(to top, #fddb92 0%, #d1fdff 100%);
-    background-repeat: round;
-  }
-
-  img {
-    width:294px;
-  }
-
-  .xp {
-    text-align:left;
-  }
-
-  h1, h2, h3 {text-transform:uppercase;}
-
-  h2 {
-    margin-top:80px;margin-bottom:50px;
-  }
-
-  h1 {
-    font-weight:normal;
-    margin-bottom:0;
-    font-size:96px;
-  }
-
-  #tagline {
-    margin-top:0;
-    text-transform:uppercase; color:gray;
-    margin-bottom:110px;
-  }
-
-  a {color:black; text-decoration:none;}
-
-  h3 {
-    margin-bottom:10px; margin-top:100px;
-  }
-
-
-  .location {margin-top:0;}
-
-  ul {padding-left:80px;}
-
-  footer {
-    margin-bottom: 5%;
-
-  }
-
-  .link { color: #28057a; } /* CSS link color (red) */
-  .link:hover { color: #00FF00; } /* CSS link hover (green) */
